# notes-editor

./: .gitignore  dialog.h  editor_page.c  editor_page.h  main.c  meson.build  notes_tag.h  sidebar.c  sidebar.h  test.c  utils.c
icons/: icon.xcf  install.sh
src/: cmark_reflink.c  cmark_reflink.h  dialog.c  edit_tags.c  edit_tags.h  editor_page.c  editor_page.h  main.c  markdown.c  markdown.h  meson.build  notes_page_list.c  notes_page_list.h  notes_page_store.c  notes_page_store.h  notes_tag.c  notes_tag_list.c  notes_tag_list.h  sidebar.c  test_cmark.c  utils.c  utils.h
test/: markdown-parse-test.c  markdown-print-test.c  match-test.c  meson.build
